[package]
name = "libp2p-stream"
version = "0.1.0-alpha"
edition = "2021"
description = "Generic stream protocols for libp2p"
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
futures = "0.3.29"
libp2p-core = { version = "0.41.2" }
libp2p-identity = { version = "0.2.8", features = ["peerid"] }
libp2p-swarm = "0.44.1"
tracing = "0.1.37"
void = "1"
rand = "0.8"

[dev-dependencies]
libp2p-swarm-test = { version = "0.3.0" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
